--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -1,30 +1,22 @@
 # This is a basic workflow that is manually triggered
 
-name: Update VM Sizes List
+name: vm_size
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
+    # inputs: None?
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  vm_size:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Calculate diff
+      run: |
+        curl https://tflintrulesstore.z5.web.core.windows.net/vm-size.json --output rules/.tflint-azure-config/vm-size.json
+        git diff > vmsize_snapshot.diff
+
