--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Calculate diff
       run: |
+        echo "Getting file from storage..."
         curl https://tflintrulesstore.z5.web.core.windows.net/vm-size.json --output rules/.tflint-azure-config/vm-size.json
-        git diff > vmsize_snapshot.diff
+        echo "Done."
+        echo "Calculating diff..."
+        git diff
+        echo "Done."
 
