Comment out refs line that's throwing an error

--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -84,7 +84,7 @@ jobs:
 
                         // Create PR
                         console.log("Creating PR...");
-                        console.log("Ref that triggered PR: " + ${{ github.ref }});
+                        // console.log("Ref that triggered PR: " + ${{ github.ref }});
                         github.pulls.create({
                           owner: 'terraform-linters',
                           repo: 'tflint-ruleset-azurerm',
