--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -89,7 +89,7 @@ jobs:
                           owner: 'terraform-linters',
                           repo: 'tflint-ruleset-azurerm',
                           title: "Update Azure VM Sizes List",
-                          head: ${{ github.ref }},
+                          head: "${{ github.ref }}"",
                           base: "master"
                         });
                     });
