--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -23,15 +23,6 @@ jobs:
         echo "Calculating diff..."
         git diff > vmsize_snapshot.diff
         echo "Done."
-    - name: Check that json file is accessible
-      uses: actions/github-script@v2
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          const fs = require('fs')
-          const data = fs.readFileSync('rules/.tflint-azure-config/vm-size.json', 'utf-8')
-          console.log("Contents of vm-size.json:diff.")
-          console.log(data)
     - name: Regenerate Go code and create PR
       uses: actions/github-script@v2
       with:
@@ -40,11 +31,11 @@ jobs:
           const fs = require('fs')
           const data = fs.readFileSync('vmsize_snapshot.diff', 'utf-8')
           if (data === "") {
-            console.log("No diff.")
+            console.log("No diff in vm-size.json file.")
             return
           }
           else {
-            console.log("Diff exists.")
+            console.log("Diff detected in vm-size.json file.")
 
             // Regenerate go code file
             console.log("Regenerating Go code file...");
@@ -84,7 +75,6 @@ jobs:
 
                         // Create PR
                         console.log("Creating PR...");
-                        // console.log("Ref that triggered PR: " + ${{ github.ref }});
                         github.pulls.create({
                           owner: 'terraform-linters',
                           repo: 'tflint-ruleset-azurerm',
@@ -92,6 +82,7 @@ jobs:
                           head: "${{ github.ref }}"",
                           base: "master"
                         });
+                        console.log("Done.");
                     });
                 })
             });
