Comment out PR step to see if it's causing invalid token error

--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -74,15 +74,15 @@ jobs:
                         console.log("End of file written successfully.");
 
                         // Create PR
-                        console.log("Creating PR...");
-                        github.pulls.create({
-                          owner: 'terraform-linters',
-                          repo: 'tflint-ruleset-azurerm',
-                          title: "Update Azure VM Sizes List",
-                          head: "${{ github.ref }}"",
-                          base: "master"
-                        });
-                        console.log("Done.");
+                        //console.log("Creating PR...");
+                        //github.pulls.create({
+                          //owner: 'terraform-linters',
+                          //repo: 'tflint-ruleset-azurerm',
+                          //title: "Update Azure VM Sizes List",
+                          //head: "${{ github.ref }}"",
+                          //base: "master"
+                        //});
+                        //console.log("Done.");
                     });
                 })
             });
