--- a/.github/workflows/vm_size.yml
+++ b/.github/workflows/vm_size.yml
@@ -76,7 +76,7 @@ jobs:
                         // Create PR
                         console.log("Creating PR...");
                         github.pulls.create({
-                          owner: 'terraform-linters',
+                          owner: 'hattan',
                           repo: 'tflint-ruleset-azurerm',
                           title: "Update Azure VM Sizes List",
                           head: "${{ github.ref }}",
